--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=development DEBUG=lifap5:* nodemon",
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
-    "doc": "jsdoc -c .jsdoc.json"
+    "doc": "jsdoc -c .jsdoc.json",
+    "build": "zip -r static/client.zip client/"
   },
   "repository": {
     "type": "git",
