feat: rate limiter sur nginx

--- a/system/nginx/default.conf
+++ b/system/nginx/default.conf
@@ -4,6 +4,9 @@ upstream nodejs {
     server localhost:3000;
 }
 
+# Rate limiter, see https://www.nginx.com/blog/rate-limiting-nginx/
+limit_req_zone $binary_remote_addr zone=ip:2m rate=5r/s;
+
 # HTTPS front for node
 server {
     listen [::]:443 ssl http2 ipv6only=on;
@@ -28,6 +31,7 @@ server {
     # }
 
     location / {
+       limit_req zone=ip burst=12 delay=8;
        include /etc/nginx/snippets/proxy-params.conf;
        proxy_pass http://nodejs;
     }
